--- a/src/style.module.css
+++ b/src/style.module.css
@@ -33,7 +33,7 @@ body{
   width: 100%;
   border: none;
   height: 50px;
-  background-color: tomato;
+  background-color: rgb(26, 157, 26);
   font-size: 1.2em;
   color: white;
   margin-top: 20px;
